# labs

./: .gitignore  CMakeLists.txt  README.md
include/: arrays.h  sort.h
lab-lib/: CMakeLists.txt
lab-lib/include/: arrays.h  sort.h
lab-lib/src/: arrays.c  sort.c
lab1/: main.c
lab2/: compress.c
lab3/: bmp.h  files.c  task.c
lab4/: task1.c  task2.c  task3.c
lab5/: task1.c  task2.c  task3.c
lab6/: task1.c  task2.c
lab7/: task1.c
lab8/: task1.c
